initial toggle and legend work, 2 colours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <div id="map"></div>
+<div id='legend' class='legend' [ngStyle]="{ 'display': legendDisplayStyle }">
+        <h4>Population</h4>
+        <div><span style='background-color: #F2F12D'></span>Residential land that does not allow apartments</div>
+        <div><span style='background-color: #1e46e6'></span>Everything else</div>
+  </div>
