--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,32 @@
 #map { height: 100%; width: 100vw; }
+
+.legend {
+    background-color: #fff;
+    border-radius: 3px;
+    bottom: 30px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.10);
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    padding: 10px;
+    position: absolute;
+    right: 10px;
+    z-index: 1;
+}
+
+.legend h4 {
+    margin: 0 0 10px;
+}
+
+.legend div span {
+    border-radius: 50%;
+    display: inline-block;
+    height: 10px;
+    margin-right: 5px;
+    width: 10px;
+}
+
+  .mapboxgl-ctrl-toggle {
+    background-image: url(/icons/my-toggle-button.svg);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+  }
