--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,12 @@ html, body {
     margin: 0;
 }
 body { padding: 0; }
+
+.mapboxgl-ctrl-custom {
+    /*background-image: url(/icons/custom-mapbox-control.svg);*/
+    
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+  }
