add link to documentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div id="map">
 </div>
 <div id='legend' class='legend' [ngStyle]="{ 'display': legendDisplayStyle }">
-        <h4>Zoning in Vancouver</h4>
+  <header>
+      <h4>Zoning in Vancouver </h4> 
+      <span>(<a href='https://www.reillywood.com/vanmap/overview/' target='_blank'><em>what's this?</em></a>)</span>
+  </header>
+        
         <div><span style='background-color: #F2F12D'></span>Residential but no apartments allowed</div>
         <div><span style='background-color: #1e46e6'></span>Everything else (including non-residential)</div>
-  </div>
+</div>
