--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,8 @@
 <div id='legend' class='legend' [ngStyle]="{ 'display': legendDisplayStyle }">
   <header>
       <h4>Zoning in Vancouver </h4> 
-      <span>(<a href='https://www.reillywood.com/vanmap/overview/' target='_blank'><em>what's this?</em></a>)</span>
+      <span>(<a href='https://www.reillywood.com/vanmap/overview/' target='_blank'><em>more info here</em></a>)</span>
   </header>
-        
         <div><span style='background-color: #F2F12D'></span>Residential but no apartments allowed</div>
         <div><span style='background-color: #1e46e6'></span>Everything else (including non-residential)</div>
 </div>
