--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,11 @@
   </header>
         <div><span style='background-color: #F2F12D'></span>Residential but no apartments allowed</div>
         <div><span style='background-color: #1e46e6'></span>Everything else (including non-residential)</div>
+        <!--<span id='closeLegendButton' (click)="toggleLegendVisibility()">[X]</span>-->
+
+        <svg id='closeLegendButton' (click)="toggleLegendVisibility()" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" stroke="black" stroke-width="2" fill="white" />
+            <path stroke="black" stroke-width="4" fill="none" d="M6.25,6.25,17.75,17.75" />
+            <path stroke="black" stroke-width="4" fill="none" d="M6.25,17.75,17.75,6.25" />
+        </svg>
 </div>
